doc(scope): detalha marcas de confianca e log da parte 2 no tutorial